--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "registro_diario",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "express": "^4.19.2",
-    "sqlite3": "^5.1.7"
-  }
-}
+    "name": "registro_diario",
+    "version": "1.0.0",
+    "description": "Proyecto para registrar pensamientos, emociones, conductas y aprendizajes.",
+    "main": "addEntry.js",
+    "scripts": {
+      "start": "node server.js"
+    },
+    "author": "Tu Nombre",
+    "license": "ISC",
+    "dependencies": {
+      "express": "^4.17.1",
+      "sqlite3": "^5.0.0"
+    }
+  }  
